--- a/apps/client/styles/globals.css
+++ b/apps/client/styles/globals.css
@@ -8,6 +8,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 16px;
+  background-color: #f6f6f7;
 }
 
 a {
@@ -17,4 +19,13 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.card {
+  border: 1px solid #f4f4f4;
+  border-radius: 5px;
+
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  background-color: white;
 }
