--- a/apps/client/styles/globals.css
+++ b/apps/client/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+#__next {
+  width: 100%;
+  height: 100%;
+}
+
 html,
 body {
   padding: 0;
@@ -10,11 +15,8 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 16px;
   background-color: #f6f6f7;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  width: 100%;
+  height: 100%;
 }
 
 * {
